# ParamountSuperbuild

./: .appveyor.yml  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
cmake/: BuildLocation.cmake  BuildType.cmake  BuildUtils.cmake  External_Boost.cmake  External_GTest.cmake  External_Paramount.cmake  External_Qt.cmake  Projects.cmake
docker/: Dockerfile
